# sissificate-agents

./: .env.example  .gitignore  README.md  panel.py  pyproject.toml
src/sissificate_dev/: __init__.py  crew.py  main.py
src/sissificate_dev/config/: agents.yaml  tasks.yaml
src/sissificate_dev/tools/: __init__.py
