[project]
name = "sissificate-dev"
version = "0.1.0"
description = "Autonomous development agents for Sissificate"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=1.9.0",
    "crewai-tools>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"